new project in progress

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 <h1>Olá, eu sou David Bissaco</h1>
                 <p>Desenvolvedor Full Stack Junior</p>
                 <span>
-                    <button class="presentation-button" onclick="scrollToSection('contatos'), '_blank'">Contatos</button>
+                    <button class="presentation-button"
+                        onclick="scrollToSection('contatos'), '_blank'">Contatos</button>
                     <a class="home-links" href="https://www.linkedin.com/in/david-bissaco-da-silva-b644a2272/"
                         target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a class="home-links" href="https://github.com/davidbs09" target="_blank"><i
@@ -57,7 +58,8 @@
                 <span>Sou um Desenvolvedor Fullstack</span>
             </h2>
             <p>ﾠMe chamo David, tenho 19 anos e sou estudante de Análise e Desenvolvimento de Sistemas.</br>
-                Tenho conhecimento Fullstack com Java, Git, HTML, CSS, JavaScript, TypeScript e Angular com foco em desenvolvimento e
+                Tenho conhecimento Fullstack com Java, Git, HTML, CSS, JavaScript, TypeScript e Angular com foco em
+                desenvolvimento e
                 boas práticas de programação.</br>
                 ﾠEstou estudando sobre Node.js e PostgreSQL.</br>
                 ﾠAtualmente, estou em transição de carreira e busco uma oportunidade como
@@ -69,10 +71,10 @@
             <i id="java" class='bx bxl-java'></i>
             <i id="spring" class='bx bxl-spring-boot'></i>
             <i id="angular" class='bx bxl-angular'></i>
-            <i id="typescript" class='bx bxl-typescript' ></i>
+            <i id="typescript" class='bx bxl-typescript'></i>
             <i id="javascript" class='bx bxl-javascript'></i>
-            <i id="nodejs" class='bx bxl-nodejs' ></i>
-            <i id="postgresql" class='bx bxl-postgresql' ></i>
+            <i id="nodejs" class='bx bxl-nodejs'></i>
+            <i id="postgresql" class='bx bxl-postgresql'></i>
             <i id="git" class='bx bxl-git'></i>
             <i id="github" class='bx bxl-github'></i>
             <i id="html" class='bx bxl-html5'></i>
@@ -81,10 +83,10 @@
             <i id="java" class='bx bxl-java'></i>
             <i id="spring" class='bx bxl-spring-boot'></i>
             <i id="angular" class='bx bxl-angular'></i>
-            <i id="typescript" class='bx bxl-typescript' ></i>
+            <i id="typescript" class='bx bxl-typescript'></i>
             <i id="javascript" class='bx bxl-javascript'></i>
-            <i id="nodejs" class='bx bxl-nodejs' ></i>
-            <i id="postgresql" class='bx bxl-postgresql' ></i>
+            <i id="nodejs" class='bx bxl-nodejs'></i>
+            <i id="postgresql" class='bx bxl-postgresql'></i>
             <i id="git" class='bx bxl-git'></i>
             <i id="github" class='bx bxl-github'></i>
             <i id="html" class='bx bxl-html5'></i>
@@ -93,10 +95,10 @@
             <i id="java" class='bx bxl-java'></i>
             <i id="spring" class='bx bxl-spring-boot'></i>
             <i id="angular" class='bx bxl-angular'></i>
-            <i id="typescript" class='bx bxl-typescript' ></i>
+            <i id="typescript" class='bx bxl-typescript'></i>
             <i id="javascript" class='bx bxl-javascript'></i>
-            <i id="nodejs" class='bx bxl-nodejs' ></i>
-            <i id="postgresql" class='bx bxl-postgresql' ></i>
+            <i id="nodejs" class='bx bxl-nodejs'></i>
+            <i id="postgresql" class='bx bxl-postgresql'></i>
             <i id="git" class='bx bxl-git'></i>
             <i id="github" class='bx bxl-github'></i>
             <i id="html" class='bx bxl-html5'></i>
@@ -106,26 +108,34 @@
     <section id="projects" class="container-projects">
         <div class="projects">
             <div class="project-content">
-                <img src="./src/print-yskynao-site.png" alt="Restaurante Yskynão">
+                <img id="loading" src="./src/logo santa fe.png" alt="Restaurante Santa Fé">
                 <div class="content">
                     <span>
-                        <h3>Restaurante Santa Fé</h3>
+                        <h3>Restaurante Santa Fé (<strong>Em Desenvolvimento</strong>)</h3>
                         <div class="icons">
+                            <i id="java" class='bx bxl-java'></i>
+                            <i id="spring" class='bx bxl-spring-boot'></i>
+                            <i id="angular" class='bx bxl-angular'></i>
+                            <i id="typescript" class='bx bxl-typescript'></i>
+                            <i id="postgresql" class='bx bxl-postgresql'></i>
                             <i id="html" class='bx bxl-html5'></i>
                             <i id="css" class='bx bxl-css3'></i>
-                            <i id="javascript" class='bx bxl-javascript'></i>
+                            <i id="git" class='bx bxl-git'></i>
                         </div>
                     </span>
-                    <p>O site foi projeto para um restaurante real para ajudar o restaurante a conseguir mais clientes
-                        sem taxa de outras empresas, melhorar seu marketing e possuir um acesso mais fácil para os
-                        clientes.
-                        Contem apresentação, navegação com links para contato dos usuários, cardápio e avaliações reais
-                        de clientes.
-                        O projeto foi feito com HTML, CSS e JavaScript.</p>
-                        <div class="buttons">
-                            <button onclick="window.open('https://restaurante-yskynao.netlify.app/', '_blank')">Projeto</button>
-                            <button onclick="window.open('https://github.com/davidbs09/RestauranteYskynao', '_blank')">Repositório Git</button>
-                        </div>
+                    <p>Recentemente iniciei um freelancer com o restaurante que precisa de um sistema robusto e adequado
+                        para controle de suas vendas, comandas e lucros.<br>
+                        Atualmente o restaurante usa um sistema que não é deles e eles pagam para usar esse sistema
+                        mensalmente, estão enfrentando problemas com o sistema e sofrendo complicações no dia a dia para
+                        o trabalho.
+                        Suas comandas não retornam valores corretos, sem controle das vendas, clientes que fazem consumo
+                        sem pagar, etc.<br>
+                        <br>Estou trabalhando atualmente em minhas horas vagas nesse projeto criando uma aplicação fullstack
+                        exclusiva para o restaurante que vai resolver todos os problemas atuais que estão enfrentando.</p>
+                    <div class="buttons">
+                        <button onclick="alert('PROJETO EM ANDAMENTO')">Projeto</button>
+                        <button onclick="alert('EM ANDAMENTO, REPOSITÓRIO PRIVADO.')">Repositório Git</button>
+                    </div>
                 </div>
             </div>
             <div class="project-content">
@@ -145,10 +155,13 @@
                         Contem apresentação, navegação com links para contato dos usuários, cardápio e avaliações reais
                         de clientes.
                         O projeto foi feito com HTML, CSS e JavaScript.</p>
-                        <div class="buttons">
-                            <button onclick="window.open('https://restaurante-yskynao.netlify.app/', '_blank')">Projeto</button>
-                            <button onclick="window.open('https://github.com/davidbs09/RestauranteYskynao', '_blank')">Repositório Git</button>
-                        </div>
+                    <div class="buttons">
+                        <button
+                            onclick="window.open('https://restaurante-yskynao.netlify.app/', '_blank')">Projeto</button>
+                        <button
+                            onclick="window.open('https://github.com/davidbs09/RestauranteYskynao', '_blank')">Repositório
+                            Git</button>
+                    </div>
                 </div>
             </div>
             <div class="project-content">
@@ -163,13 +176,16 @@
                         </div>
                     </span>
                     <p>Aplicativo com possui a ideia de mostrar a previsão do tempo para os usuários
-                        de uma forma mais simples e objetiva. Possui conexão com a API OpenWeatherMap para 
+                        de uma forma mais simples e objetiva. Possui conexão com a API OpenWeatherMap para
                         obter informações completas de previsão daquela cidade/estado que o usuário pesquisar.
                     </p>
-                        <div class="buttons">
-                            <button onclick="window.open('https://weather-forecast-db9.netlify.app', '_blank')">Projeto</button>
-                            <button onclick="window.open('https://github.com/davidbs09/weather-forecast', '_blank')">Repositório Git</button>
-                        </div>
+                    <div class="buttons">
+                        <button
+                            onclick="window.open('https://weather-forecast-db9.netlify.app', '_blank')">Projeto</button>
+                        <button
+                            onclick="window.open('https://github.com/davidbs09/weather-forecast', '_blank')">Repositório
+                            Git</button>
+                    </div>
                 </div>
             </div>
             <div class="project-content">
@@ -192,8 +208,11 @@
                         tela menor, não fique mostrando aquele excesso de informações.
                     </p>
                     <div class="buttons">
-                        <button onclick="window.open('https://spotify-dev-davidbs09.netlify.app/', '_blank')">Projeto</button>
-                        <button onclick="window.open('https://github.com/davidbs09/spotifyPage-js', '_blank')">Repositório Git</button>
+                        <button
+                            onclick="window.open('https://spotify-dev-davidbs09.netlify.app/', '_blank')">Projeto</button>
+                        <button
+                            onclick="window.open('https://github.com/davidbs09/spotifyPage-js', '_blank')">Repositório
+                            Git</button>
                     </div>
                 </div>
             </div>
@@ -211,10 +230,13 @@
                         Java e Spring boot o sistema com endpoints para consultar os jogos totais do banco, jogos por
                         id, listas de categorias de jogos, jogos por listas e também foi implementado um endpoint capaz
                         de mover a ordem dos jogos no banco de dados sem afetar suas posições e organização.</p>
-                        <div class="buttons">
-                            <button onclick="window.open('https://www.linkedin.com/posts/david-bissaco-da-silva_boa-noite-tudo-bem-hoje-venho-apresentar-activity-7300287714338205697-OQlg?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEKizfwBSOI_J-oeXJPY-ZLIUwGd5nit0yg', '_blank')">Projeto</button>
-                            <button onclick="window.open('https://github.com/davidbs09/dslist-backend', '_blank')">Repositório Git</button>
-                        </div>
+                    <div class="buttons">
+                        <button
+                            onclick="window.open('https://www.linkedin.com/posts/david-bissaco-da-silva_boa-noite-tudo-bem-hoje-venho-apresentar-activity-7300287714338205697-OQlg?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEKizfwBSOI_J-oeXJPY-ZLIUwGd5nit0yg', '_blank')">Projeto</button>
+                        <button
+                            onclick="window.open('https://github.com/davidbs09/dslist-backend', '_blank')">Repositório
+                            Git</button>
+                    </div>
                 </div>
             </div>
         </div>
