--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <section id="projects" class="container-projects">
         <div class="projects">
             <div class="project-content">
-                <img id="loading" src="./src/logo santa fe.png" alt="Restaurante Santa Fé">
+                <img id="loading" src="./src/loading.png" alt="Restaurante Santa Fé">
                 <div class="content">
                     <span>
                         <h3>Restaurante Santa Fé (<strong>Em Desenvolvimento</strong>)</h3>
