--- a/index.html
+++ b/index.html
@@ -57,12 +57,16 @@
                 Sobre mim</br>
                 <span>Sou um Desenvolvedor Fullstack</span>
             </h2>
-            <p>ﾠMe chamo David, tenho 19 anos e sou estudante de Análise e Desenvolvimento de Sistemas.</br>
-                Tenho conhecimento Fullstack com Java, Git, HTML, CSS, JavaScript, TypeScript e Angular com foco em
+            <p>Me chamo David, tenho 20 anos e atualmente trabalho como Desenvolvedor Fullstack Freelancer e também sou
+                estudante de Análise e Desenvolvimento de Sistemas.</br>
+                </br>Tenho conhecimento Fullstack com Java, Spring Boot, Angular, TypeScript, JavaScript, PostgreSQL,
+                Git,
+                HTML e CSS com foco em
                 desenvolvimento e
                 boas práticas de programação.</br>
-                ﾠEstou estudando sobre Node.js e PostgreSQL.</br>
-                ﾠAtualmente, estou em transição de carreira e busco uma oportunidade como
+                </br>Atualmente estou buscando aprofundar meus conhecimentos com TypeScript, Node.js e PostgreSQL.</br>
+                E também comecei meus estudos com AWS e Docker.</br>
+                </br>No momento estou em transição de carreira e busco uma oportunidade como
                 profissional júnior ou trainee na área de Tecnologia e Desenvolvimento de Software.</p>
         </div>
     </main>
@@ -118,8 +122,10 @@
                         o trabalho.
                         Suas comandas não retornam valores corretos, sem controle das vendas, clientes que fazem consumo
                         sem pagar, etc.<br>
-                        <br>Estou trabalhando atualmente em minhas horas vagas nesse projeto criando uma aplicação fullstack
-                        exclusiva para o restaurante que vai resolver todos os problemas atuais que estão enfrentando.</p>
+                        <br>Estou trabalhando atualmente em minhas horas vagas nesse projeto criando uma aplicação
+                        fullstack
+                        exclusiva para o restaurante que vai resolver todos os problemas atuais que estão enfrentando.
+                    </p>
                     <div class="buttons">
                         <button onclick="alert('PROJETO EM ANDAMENTO')">Projeto</button>
                         <button onclick="alert('EM ANDAMENTO, REPOSITÓRIO PRIVADO.')">Repositório Git</button>
